--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,9 @@ test:
   database: bookmyshow_test
   username: postgres
   password: postgres
+
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: bookmyshow_production
+  username: postgres
+  password: postgres
