--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "4.3.0",
+    "jquery": "^3.6.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.73.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0"
   },
   "version": "0.1.0",
